imagem do trote

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </head>
     <body>
         <div class="container"> <!-- divisão lógica de conteúdo -->
-            <img class="foto" src="https://placehold.co/150" alt="Foto de Perfil"/>
+            <img class="foto" src="img/trote.jpg" alt="Foto de Perfil"/>
             <!-- cabeçalho de nível 2-->
-            <h2> Daniel Pires </h2>
+            <h2> Luca Telini Crozara </h2>
             <!-- parágrafo -->
-            <p> Estudante do Departamento de Computação </p> 
+            <p> Estudante de bacharelado em Ciências da Computação </p> 
             <button onclick="mensagem()"> Seguir </button>
         </div>
     </body>
