--- a/trote/index.html
+++ b/trote/index.html
@@ -21,9 +21,14 @@
                     <a href="observacoes.html"> Observações </a>
                     <a href="calculadoras.html"> Calculadoras </a>
                     </div>
+                    <img src="images/trote.jpg" alt="Trote Solidário" />
+                </nav>
+                <div class="container">
+                    <h2> Trote Solidário - Construa vitórias fora de campo e jogue pela solidariedade
+                        </h2>
+                        <p> CENTRO UNIVERSITÁRIO MUNICIPAL DE FRANCA </p>
+                        <p> Uni-FACEF
+                         <p> Regulamento Trote Solidário - 2025   
 
-
-
-            </nav>
     </body>
 </html>
